--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Catch them Netlifolk!"
+      content="Gotta Catch 'Em All!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Gitmon</title>
+    <title>Gitémon</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
